--- a/style.css
+++ b/style.css
@@ -92,3 +92,22 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 576px) {
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  p {
+    text-align: center;
+  }
+  .primary-link {
+    display: block;
+    margin: 0 20px;
+    text-align: center;
+  }
+}
