--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin: 100px auto 0 auto;
+  margin: 100px 0;
 }
 
 h1,
@@ -52,6 +52,10 @@ p {
   color: white;
 }
 
+.contact-link:hover {
+  color: white;
+}
+
 .about-link {
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
@@ -70,6 +74,10 @@ p {
   text-transform: capitalize;
   background-color: var(--primary-color);
   box-shadow: var(--box-shadow);
+  color: white;
+}
+
+.primary-link:hover {
   color: white;
 }
 
